--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 @font-face {
     font-family: bellandha-signature;
-    src: url(../fonts/bellandha-signature.regular.ttf);
+    src: url(./fonts/bellandha-signature.regular.ttf);
 }
 
 @font-face {
