--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 .name {
     font-family: Blacklist1;
     position: absolute;
-    top: 47vh;
-    left: 47vw;
+    top: 400px;
+    left: 400px;
     font-size: 12vh;
     color: #003B79;
 }
