--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
     src: url(./fonts/The\ Blacklist\ \(1\).ttf);
 }
 
+.background_img {
+    width: 877px;
+    height: 630px;
+}
+
 .proud {
     font-family: Myriad;
     position: absolute;
@@ -172,7 +177,7 @@
 .degree {
     font-family: MyriadWebPro-Bold;
 }
-
+/* 
 @media screen and (max-width: 1450px) {
     .passing {
         max-width: 35vw;
@@ -343,7 +348,7 @@
         left: 70.5vw;
         font-size: 0.8vh;
     }
-}
+} */
     </style>
 </head>
 <body>
