--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 .name {
     font-family: Blacklist1;
     position: absolute;
-    top: 400px;
+    top: 250px;
     left: 400px;
-    font-size: 12vh;
+    font-size: 80px;
     color: #003B79;
 }
 
