changed to pixels

--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
 .proud {
     font-family: Myriad;
     position: absolute;
-    top: 40vh;
-    left: 51vw;
-    font-size: 2.4vh;
+    top: 270px;
+    left: 425px;
+    font-size: 17px;
     color: #2A2A2A;
 }
 
 .name {
     font-family: Blacklist1;
     position: absolute;
-    top: 250px;
-    left: 400px;
+    top: 290px;
+    left: 390px;
     font-size: 80px;
     color: #003B79;
 }
@@ -98,10 +98,10 @@
 .passing {
     font-family: MyriadWebPro;
     position: absolute;
-    top: 62vh;
-    left: 47vw;
-    font-size: 2.4vh;
-    max-width: 30vw;
+    top: 400px;
+    left: 370px;
+    font-size: 17px;
+    max-width: 420px;
     text-align: center;
     color: #2A2A2A;
 }
@@ -109,67 +109,65 @@
 .mahesh_wagh_sign {
     font-family: bellandha-signature;
     position: absolute;
-    top: 77vh;
-    left: 50vw;
-    font-size: 5.5vh;
-    max-width: 30vw;
+    top: 460px;
+    left: 400px;
+    font-size: 32px;
     text-align: center;
 }
 
 .mahesh_wagh_sign_underline {
     position: absolute;
-    top: 84vh;
-    left: 50vw;
-    width: 11vw;
+    top: 505px;
+    left: 400px;
+    width: 120px;
 }
 
 .anagha_wagh_sign {
     font-family: bellandha-signature;
     position: absolute;
-    top: 77vh;
-    left: 66vw;
-    font-size: 5.5vh;
-    max-width: 30vw;
+    top: 460px;
+    left: 640px;
+    font-size: 32px;
     text-align: center;
 }
 
 .anagha_wagh_sign_underline {
     position: absolute;
-    top: 84vh;
-    left: 66vw;
-    width: 11vw;
+    top: 505px;
+    left: 640px;
+    width: 120px;
 }
 
 .regards_mahesh {
     position: absolute;
-    top: 85.5vh;
-    left: 52vw;
-    font-size: 2vh;
+    top: 520px;
+    left: 420px;
+    font-size: 12px;
     font-family: Myriadb;
 }
 
 .regards_anagha {
     position: absolute;
-    top: 85.5vh;
-    left: 68.7vw;
-    font-size: 2vh;
+    top: 520px;
+    left: 660px;
+    font-size: 12px;
     font-family: Myriadb;
 }
 
 .subtitle_mahesh {
     position: absolute;
-    top: 88vh;
-    left: 53vw;
-    font-size: 1.2vh;
+    top: 535px;
+    left: 425px;
+    font-size: 8px;
     font-family: Myriad;
     color: #2A2A2A;
 }
 
 .subtitle_anagha {
     position: absolute;
-    top: 88vh;
-    left: 69vw;
-    font-size: 1.2vh;
+    top: 535px;
+    left: 660px;
+    font-size: 8px;
     font-family: Myriad;
     color: #2A2A2A;
 }
